# TAOS

./: .gdbinit  .gitignore  Makefile  README.md  out.txt
kernel/: Cargo.toml  Makefile  build.rs  build.zig  limage_config.toml  limine.conf  linker-x86_64.ld  temp  x86_64-taos.json
kernel/.cargo/: config.toml
kernel/linker/: x86_64.ld
kernel/src/: init.rs  lib.rs  lib.zig  logging.rs  main.rs  main.zig  util.zig
kernel/src/constants/: events.rs  gdt.rs  idt.rs  memory.rs  mmap.rs  mod.rs  ports.rs  processes.rs  syscalls.rs  x2apic.rs
kernel/src/devices/: mmio.rs  mod.rs  pci.rs  sd_card.rs  serial.rs  xhci.rs
kernel/src/drivers/: serial.zig
kernel/src/events/: event.rs  event_runner.rs  futures.rs  mod.rs
kernel/src/filesys/: mod.rs
kernel/src/filesys/block/: memory.rs
kernel/src/filesys/fat16/: boot_sector.rs  constants.rs  dir_entry.rs  fat_entry.rs  file.rs  mod.rs
kernel/src/interrupts/: gdt.rs  gdt.s  gdt.zig  idt.rs  idt.zig  interrupts.s  mod.rs  old.zig  syscalls.rs  temp.zig  x2apic.rs
kernel/src/ipc/: channel.rs  error.rs  messages.rs  mod.rs  requests.rs  responses.rs  serialization.rs
kernel/src/lib/: bitmap.zig
kernel/src/memory/: allocator.rs  allocator.zig  bitmap.zig  bitmap_frame_allocator.rs  boot_frame_allocator.rs  frame_allocator.rs  frame_allocator.zig  frameallocator.rs  heap.rs  limine_memmap.zig.bak  memory.rs  mod.rs  paging.rs  pmm.zig  tlb.rs  vm.zig  vmm.zig
kernel/src/processes/: loader.rs  mod.rs  process.rs  registers.rs  small_c_program
kernel/src/processes/test_binaries/: deadbeef  long_loop  long_loop.asm  long_loop2  long_loop_print  long_loop_print.asm  mmap  mmap_anon_simple  mmap_anon_simple.asm  mmap_anon_simple_test  pause_loop  pause_loop.asm  print  print_exit  print_exit.asm  print_print_exit  print_print_exit.asm  rand_rax  rand_regs  rand_regs.asm  rand_regs_exit  rand_regs_exit.asm  rax  segmentation_fault  segmentation_fault.asm  sleep  sleep.asm  syscall_and_args_loop  syscall_and_loop  syscall_test  syscalltest  test.asm  test_32bit_mmap_simple  test_32bit_mmap_simple.asm  test_asm_32bit_syscall  test_asm_32bit_syscall.asm  test_memory_mmap  test_memory_mmap.asm  test_print  test_print.asm  (+2 more)
kernel/src/syscalls/: fork.rs  mmap.rs  mod.rs  syscall_handlers.rs  syscalls.rs
(+1 files in other folders)
