[package]
name = "taos"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a build error.
strict = []


[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.3.1"
raw-cpuid = "11.3.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"
talc = "4.4.2"

[package.metadata.limage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
image-path = "target/grovean/grovean-x86_64.iso"
