[package]
name = "taos"
version = "0.1.0"
edition = "2021"

[features]
# Treat warnings as a build error.
strict = []


[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.3.1"
raw-cpuid = "11.3.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"
talc = "4.4.2"

rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
arrayvec = { version = "0.7.6", default-features = false }

#[build-dependencies]
#serde = { version = "1.0.217", features = ["derive"] }
#toml = "0.8.20"

[package.metadata.limage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
image-path = "target/grovean/grovean-x86_64.iso"
